fixed overflow issue on sidebar

--- a/themes/hugo-tranquilpeak-theme/src/scss/layouts/_sidebar.scss
+++ b/themes/hugo-tranquilpeak-theme/src/scss/layouts/_sidebar.scss
@@ -28,6 +28,7 @@
         right: 0;
         bottom: 0;
         left: 0;*/
+        overflow: auto;  
         height: 100%;
         background-color: rgba(68, 68, 68, 0.3);
         background-image: -webkit-linear-gradient(-410deg, rgba(68, 68, 68, 0.2) 20%, rgba(0, 0, 0, 0.9));
